--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -405,6 +405,51 @@ body {
     color: #d82ce1;
   }
 
+  .pf-main {
+    display: flex;
+    flex-direction: column;
+    justify-content: initial;
+    align-items: center;
+  }
+  .pf-main .int-main {
+    background-color: rgba(71, 64, 86, 0.5);
+    border-radius: 0.5rem;
+    width: 80%;
+  }
+  .pf-main .int-main__title h1 {
+    font-size: 3rem;
+  }
+
+  .card2 {
+    width: 60rem;
+  }
+  .card2__text h4 {
+    font-size: 2rem;
+  }
+  .card2__text p {
+    font-size: 1.1rem;
+  }
+
+  .disco-main {
+    background-color: rgba(71, 64, 86, 0.5);
+    border-radius: 0.5rem;
+    width: 80%;
+  }
+  .disco-main__title h1 {
+    font-size: 3rem;
+  }
+
+  .card1 {
+    width: 50rem;
+  }
+
+  .bio-main {
+    background-color: rgba(71, 64, 86, 0.5);
+    border-radius: 0.5rem;
+    width: 80%;
+    padding-top: 0.5rem;
+  }
+
   .pf-footer {
     flex-direction: row;
     align-items: initial;
