--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -62,6 +62,9 @@ body {
   grid-area: headerr;
   padding: 0.5rem;
 }
+.pf-header a {
+  text-decoration: none;
+}
 .pf-header__logo {
   font-size: 3rem;
   font-family: "Oswald", sans-serif;
